sales report ok without cteam

--- a/views/prescription_seen/prescription_list.html
+++ b/views/prescription_seen/prescription_list.html
@@ -196,7 +196,7 @@ $(function() {
               <input type="submit" name="btn_filter_all" id="btn_filter_all" value="All"   class="button_update"/>
               </td>
 
-              <td width="100" align="right"  ><select name="search_month" id="search_month"  >
+              <!-- <td width="100" align="right"  ><select name="search_month" id="search_month"  >
                 <option value="">Select Month</option>
                 <option value="JAN" >JAN</option>
                 <option value="FEB" >FEB</option>
@@ -213,8 +213,9 @@ $(function() {
 
                                     
                 
-              </select></td>
-              <td width="100" align="right"  ><input type="submit" name="btn_download" id="btn_download" value="Download"   class="btn_download"/></td>
+              </select></td> -->
+              <!-- <td width="100" align="right"  ><input type="submit" name="btn_download" id="btn_download" value="Download"   class="btn_download"/></td> -->
+              <td></td><td></td>
           </tr>
 		  </form>
         </table>
