--- a/views/report_seen_rx_mobile/report_seen_rx_area_wise.html
+++ b/views/report_seen_rx_mobile/report_seen_rx_area_wise.html
@@ -16,7 +16,7 @@
 
     
     <tr class="table-success">
-     <td >Territory: &nbsp;{{=area_id}}</td>
+     <td >Territory: &nbsp;{{=area_id}}</td><td >SubmittedBy: &nbsp;{{=area_id}}</td>
     </tr>
 
   </table>
