--- a/views/report_seen_rx_mobile/report_seen_rx_slWise.html
+++ b/views/report_seen_rx_mobile/report_seen_rx_slWise.html
@@ -30,7 +30,7 @@
   <tr class="table-secondary">
     
     <td >SL: &nbsp;{{=medicine_sl}}</td>
-    <td >Submitted by: &nbsp;{{=rep_id}}</td>
+    <td >Submitted by: &nbsp;{{=session.s_id}}</td>
   </tr>
   <tr class="table-success">
     <td >Territory: &nbsp;{{=area_id}}</td>
