--- a/views/sales_report_invoice/sales_report_area_wise.html
+++ b/views/sales_report_invoice/sales_report_area_wise.html
@@ -16,10 +16,12 @@
 
     <tr class="table-secondary">
       <td ><!-- Order Date: --> &nbsp;{{#=order_date}}</td>
+      <td ><!-- Order Date: --> &nbsp;{{#=order_date}}</td>
       
     </tr>
     <tr class="table-success">
      <td >Territory: &nbsp;{{=area_id}}</td>
+     <td >Submitted By: &nbsp;{{=s_id}}</td>
     </tr>
 
   </table>
