--- a/views/sales_report_invoice/sales_report_detail.html
+++ b/views/sales_report_invoice/sales_report_detail.html
@@ -122,6 +122,7 @@ $(function() {
     <thead class="table-dark">
       <!-- <th scope="col">Order Date</th> -->
         <th scope="col">Territory</th>
+        <th scope="col">SubmittedBy</th>
         <th scope="col">Visit Count</th>
         <th scope="col">Order Count</th>
         <th scope="col" class="text-right">Order Amount</th>
@@ -138,64 +139,78 @@ $(function() {
       
       {{for i in range(len(records_ov)):
         records_ov_dict=records_ov[i]        
-        area_name=str(records_ov_dict["area_name"])      
+        area_name=str(records_ov_dict["max(area_name)"])      
         area_id=str(records_ov_dict["area_id"])            
-        order_date=str(records_ov_dict["order_date"])            
+        s_id=str(records_ov_dict["rep_id"])   
+        s_name=str(records_ov_dict["max(rep_name)"])            
+
 
         totalprice=0  
       }}
       {{
         visit_count=0
-        Vcheck=str(area_id) 
-          
-        if [s for s in vChecklist if Vcheck in s]:
-          index_element = vChecklist.index(Vcheck)           
-          visit_count=vCountList[index_element]
-           
-        pass 
+        Vcheck=str(area_id) +'|'+str(s_id)
+        try:
+          if [s for s in vChecklist if Vcheck in s]:
+            index_element = vChecklist.index(Vcheck)           
+            visit_count=vCountList[index_element]
+             
+          pass 
+        except:
+          pass
 
        }}   
        {{
           order_count=0
           Ocheck=str(area_id) 
-
-          if [s for s in OChecklist if Ocheck in s]:
-            index_element = OChecklist.index(Ocheck)           
-            order_count=OCountList[index_element]
-           
-          pass 
+          try:
+            if [s for s in OChecklist if Ocheck in s]:
+              index_element = OChecklist.index(Ocheck)           
+              order_count=OCountList[index_element]
+             
+            pass 
+          except:
+            pass
        }}    
       {{
         totalprice=0
         Oacheck=str(area_id) 
-        if [s for s in OAmountChecklist if Oacheck in s]:
-          index_element = OAmountChecklist.index(Oacheck)           
-          totalprice=OamountList[index_element] 
-        pass 
+        try:
+          if [s for s in OAmountChecklist if Oacheck in s]:
+            index_element = OAmountChecklist.index(Oacheck)           
+            totalprice=OamountList[index_element] 
+          pass 
+        except:
+          pass
       }} 
       {{
         invoice_count=0
         invcCheck=str(area_id) 
-
-        if [s for s in invcChecklist if invcCheck in s]:
-          index_element = invcChecklist.index(invcCheck)           
-          invoice_count=invcCountList[index_element]
-         
-        pass 
+        try:
+          if [s for s in invcChecklist if invcCheck in s]:
+            index_element = invcChecklist.index(invcCheck)           
+            invoice_count=invcCountList[index_element]
+           
+          pass 
+        except:
+          pass
       }}      
       {{
           invoice_totalprice=0
           invcAmountCheck=str(area_id) 
-
-          if [s for s in invcAmntChecklist if invcAmountCheck in s]:
-            index_element = invcAmntChecklist.index(invcAmountCheck)           
-            invoice_totalprice=invcAmntList[index_element]
+          try:
+            if [s for s in invcAmntChecklist if invcAmountCheck in s]:
+              index_element = invcAmntChecklist.index(invcAmountCheck)           
+              invoice_totalprice=invcAmntList[index_element]
            
-          pass 
+            pass 
+          except:
+            pass
        }}   
       <tr class="table-primary">
         <!-- <th scope="row" class="text-center">{{#=order_date}}</th> -->
         <td class="text-center" >{{=area_name}}|{{=area_id}}</td>
+        <td class="text-center" >{{=s_name}}|{{=s_id}}</td>
 
  
         {{
@@ -228,13 +243,15 @@ $(function() {
  
           {{=invoice_totalprice}}
         </td> -->
-        <td class="text-right"><a style="text-decoration: none;font-size: 20px"  href="{{=URL(c='sales_report_invoice',f='sales_report_area_wise_url', vars=dict(cid=cid,rep_id=rep_id,password=password,device_id=synccode,se_market_report=se_market_report,area_id=area_id,to_date=session.to_date,from_date=session.from_dt,invoice_count=invoice_count))}}" >
+        <td class="text-right"><a style="text-decoration: none;font-size: 20px"  href="{{=URL(c='sales_report_invoice',f='sales_report_area_wise_url', vars=dict(cid=cid,rep_id=rep_id,password=password,device_id=synccode,se_market_report=se_market_report,area_id=area_id,to_date=session.to_date,from_date=session.from_dt,invoice_count=invoice_count,s_id=s_id,s_name=s_name,area_name=area_name))}}" >
           &raquo;
         </a>
         </td>
       </tr>
       {{pass}}
       <tr class="table-light">
+        <td  class="text-right text-danger"> </td>
+
         <td  class="text-right text-danger">Total </td>
         <td  class="text-center">{{=t_v_count}}</td>
         <td  class="text-center">{{=t_o_count}}</td>
