--- a/views/sales_report_invoice_test/sales_report_detail.html
+++ b/views/sales_report_invoice_test/sales_report_detail.html
@@ -77,7 +77,7 @@ $(function() {
 <div class="table-responsive-sm">
   <table class="table mb-0" >
     <tbody>
-      <form action="{{=URL(c='sales_report_invoice',f='sales_report_detail_url',vars=dict(cid=cid,rep_id=rep_id,password=password,device_id=synccode,se_market_report=se_market_report))}}">
+      <form action="{{=URL(c='sales_report_invoice_test',f='sales_report_detail_url',vars=dict(cid=cid,rep_id=rep_id,password=password,device_id=synccode,se_market_report=se_market_report))}}">
         <input type="hidden" name="cid" value="{{=cid}}">
         <input type="hidden" name="rep_id" id="rep_id" value="{{=rep_id}}">
         <input type="hidden" name="password" id="password" value="{{=password}}">
